# ai_ajan

./: .gitignore  README.md  pyproject.toml
localcoder/: __init__.py  cli.py
localcoder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
localcoder/agent/: __init__.py  autonomous.py  base.py  coding.py  editing.py  fixing.py  git_ops.py  interactive.py  router.py  simple.py
localcoder/config/: __init__.py  manager.py  settings.py
localcoder/memory/: __init__.py  store.py
localcoder/models/: __init__.py  message.py
localcoder/prompts/: system_prompt.md
localcoder/providers/: __init__.py  ollama.py
localcoder/skills/bug_fixer/: skill.md
localcoder/skills/html_builder/: allowed_tools.json  examples.json  skill.md  system_prompt.md
localcoder/skills/python_expert/: skill.md
localcoder/tests/: __init__.py  test_config.py  test_tools.py
localcoder/tools/: __init__.py  base.py  filesystem.py  git.py  search.py  shell.py
localcoder/utils/: __init__.py  rich.py
